<resources>
    <string name="app_name">Aqua Lab</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sensores">Sensores</string>
    <string name="in_cio">Início</string>
    <string name="dados">Insights</string>
    <string name="dispositivos">Estações</string>
    <string name="usuario">Conta</string>
    <string name="dashboard">O oceano de informações</string>
    <string name="sensoresTexto">Rede de Sensores</string>
    <string name="sensor_de_ph">PH</string>
    <string name="temperatura">Temperatura</string>
    <string name="tds">TDS</string>
    <string name="turbidez">Turbidez</string>
    <string name="tend_ncias_h_dricas">Tendências Hídricas</string>
    <string name="aqualab">Aqua Lab</string>
    <string name="senha">Senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="exit_icon">Exit Icon</string>
    <string name="os_dados_em_gr_ficos">Os dados em gráficos</string>
    <string name="exportar_dados">Exportar Dados</string>
    <string name="s_lidos_dissolvidos_totais">Sólidos Dissolvidos Totais</string>
    <string name="condutividade_el_trica">CDE</string>
    <string name="alertas">Notificações</string>
    <string name="os_dados_em_gr_ficosTemp">Os dados em gráficos</string>
    <string name="sua_atividade">Sua atividade</string>
</resources>