<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dashboard">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarDashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_700"
        android:gravity="center"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/dashboard"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="12dp">

        </TextView>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/layoutDashPrincipal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textViewRede"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensoresTexto"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/purple_700"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="80dp"
            >
        </TextView>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UselessLeaf">

            <LinearLayout
                android:id="@+id/layoutCardsSensores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <GridLayout
                    android:id="@+id/gradeCardsSensores"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="2"
                    android:rowCount="2"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="23dp"
                    android:layout_marginEnd="23dp"
                    android:alignmentMode="alignMargins"
                    android:columnOrderPreserved="false">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/carta01"
                        android:layout_width="180dp"
                        android:layout_height="150dp"
                        app:cardCornerRadius="15dp"
                        android:layout_marginEnd="5dp"
                        android:layout_columnWeight="0"
                        android:layout_rowWeight="0"
                        app:cardElevation="2dp"
                        app:cardUseCompatPadding="true"
                        >
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            tools:ignore="UseCompoundDrawables">
                            <ImageView
                                android:layout_marginTop="25dp"
                                android:layout_width="65dp"
                                android:layout_height="65dp"
                                android:src="@drawable/ph"
                                android:layout_gravity="center"
                                tools:ignore="ContentDescription">
                            </ImageView>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/sensor_de_ph"
                                android:layout_gravity="center"
                                android:layout_marginTop="2dp"
                                android:textColor="@color/purple_700"
                                android:textSize="20sp"
                                >
                            </TextView>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/carta02"
                        android:layout_width="180dp"
                        android:layout_height="150dp"
                        app:cardCornerRadius="15dp"
                        android:layout_columnWeight="0"
                        android:layout_rowWeight="1"
                        app:cardElevation="2dp"
                        app:cardUseCompatPadding="true"
                        >
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            >
                            <ImageView
                                android:layout_marginTop="25dp"
                                android:layout_width="65dp"
                                android:layout_height="65dp"
                                android:src="@drawable/temperatura"
                                android:layout_gravity="center"
                                >
                            </ImageView>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/temperatura"
                                android:layout_gravity="center"
                                android:layout_marginTop="2dp"
                                android:textColor="@color/purple_700"
                                android:textSize="20sp"
                                >
                            </TextView>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:id="@+id/carta03"
                        android:layout_width="180dp"
                        android:layout_height="150dp"
                        app:cardCornerRadius="15dp"
                        app:cardElevation="2dp"

                        app:cardUseCompatPadding="true"
                        >
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            >
                            <ImageView
                                android:layout_marginTop="25dp"
                                android:layout_width="65dp"
                                android:layout_height="65dp"
                                android:src="@drawable/qualidade"
                                android:layout_gravity="center"
                                >
                            </ImageView>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/tds"
                                android:layout_gravity="center"
                                android:layout_marginTop="2dp"
                                android:textColor="@color/purple_700"
                                android:textSize="20sp"
                                >
                            </TextView>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:id="@+id/carta04"
                        android:layout_width="180dp"
                        android:layout_height="150dp"
                        app:cardCornerRadius="15dp"
                        app:cardElevation="2dp"
                        app:cardUseCompatPadding="true"
                        >
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            >
                            <ImageView
                                android:layout_marginTop="25dp"
                                android:layout_width="65dp"
                                android:layout_height="65dp"
                                android:src="@drawable/turbidez"
                                android:layout_gravity="center"
                                >
                            </ImageView>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/turbidez"
                                android:layout_gravity="center"
                                android:layout_marginTop="2dp"
                                android:textColor="@color/purple_700"
                                android:textSize="20sp"
                                >
                            </TextView>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </GridLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/tend_ncias_h_dricas"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/purple_700"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    >
                </TextView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/cardGráficoTempDash"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginBottom="30dp"
                    android:elevation="10dp"
                    app:cardCornerRadius="1dp"
                    app:cardElevation="2dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="30dp"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:layout_height="match_parent"
                        android:weightSum="2"
                        >
                        <com.github.mikephil.charting.charts.LineChart
                            android:id="@+id/LinhasGraficoDashBoard"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                        </com.github.mikephil.charting.charts.LineChart>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navegacaoDash"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/purple_700"
        app:itemIconTint="@color/white"
        app:itemRippleColor="@color/white"
        app:itemTextColor="@color/white"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation"
        tools:ignore="MissingClass" />
</androidx.constraintlayout.widget.ConstraintLayout>