<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sensor_TDS">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarSensorTDS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        app:title="Sensor - TDS"
        app:titleTextColor="@color/white">

        <ImageView
            android:id="@+id/refreshIconTDS"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:src="@drawable/baseline_refresh_24"
            android:layout_gravity="end"
            android:onClick="atualizar"
            tools:ignore="ContentDescription" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarSensorTDS"
        tools:ignore="UselessLeaf">

        <LinearLayout
            android:id="@+id/layoutPrincipal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <GridLayout
                android:id="@+id/gradeCardPamsTDS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:rowCount="1"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:alignmentMode="alignMargins"
                android:layout_gravity="center_horizontal"
                android:columnOrderPreserved="false">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cartaParametroTDS"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    app:cardCornerRadius="15dp"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="0"
                    app:cardElevation="2dp"
                    android:backgroundTint="@color/white"
                    app:cardUseCompatPadding="true"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        >
                        <ImageView
                            android:src="@drawable/qualidade"
                            android:layout_marginTop="10dp"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            >
                        </ImageView>
                        <TextView
                            android:text="@string/tds"
                            android:layout_marginTop="5dp"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:layout_gravity="center_horizontal"
                            android:textColor="@color/purple_700"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                        </TextView>
                        <TextView
                            android:id="@+id/valorAtualParametroTDS"
                            android:text=""
                            android:layout_marginTop="2dp"
                            android:textSize="20sp"
                            android:layout_gravity="center_horizontal"
                            android:textColor="@color/vermelhao"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                        </TextView>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/cartaParametroCDE"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    app:cardCornerRadius="15dp"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    app:cardElevation="2dp"
                    android:backgroundTint="@color/white"
                    app:cardUseCompatPadding="true"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        >
                        <ImageView
                            android:src="@drawable/condutividade"
                            android:layout_marginTop="10dp"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            >
                        </ImageView>
                        <TextView
                            android:text="@string/condutividade_el_trica"
                            android:layout_marginTop="5dp"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:layout_gravity="center_horizontal"
                            android:textColor="@color/purple_700"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                        </TextView>
                        <TextView
                            android:id="@+id/valorAtualParametroCDE"
                            android:text=""
                            android:layout_marginTop="2dp"
                            android:textSize="20sp"
                            android:layout_gravity="center_horizontal"
                            android:textColor="@color/vermelhao"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                        </TextView>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </GridLayout>

            <TextView
                android:id="@+id/textViewDadosLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/os_dados_em_gr_ficos"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/purple_700"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="-5dp"
                >
            </TextView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardGráficoTDS"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="15dp"
                android:elevation="10dp"
                app:cardElevation="2dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:alignmentMode="alignMargins"
                app:cardCornerRadius="5dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="match_parent"
                    android:weightSum="2"
                    >
                    <com.github.mikephil.charting.charts.BarChart
                        android:id="@+id/BarrasGraficoTDS"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    </com.github.mikephil.charting.charts.BarChart>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/exportarTDS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bc_button"
                android:shadowRadius="20"
                android:text="@string/exportar_dados"
                android:textColor="@color/white"
                android:textSize="20sp">
                </androidx.appcompat.widget.AppCompatButton>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>